force-app/main/default/objects/Samples__c/fields/Abacus_Reference__c.field-meta.xml
<CustomField>
    <fullName>Abacus_Reference__c</fullName>
    <inlineHelpText>Enter the order number once the status is shipped.</inlineHelpText>
    <label>Abacus Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>