force-app/main/default/objects/Samples__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>