force-app/main/default/objects/Samples__c/fields/Account_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email__c</fullName>
    <description>Email of Account Owner, used to send final approval/rejection notification</description>
    <inlineHelpText>Email of Account Owner, used to send final approval/rejection notification</inlineHelpText>
    <label>Account Owner Email</label>
    <type>Email</type>
</CustomField>