force-app/main/default/objects/Samples__c/fields/Account_Sales_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Admin_Email__c</fullName>
    <description>Used to send email notification</description>
    <inlineHelpText>Used to send email notification</inlineHelpText>
    <label>Account Sales Admin Email</label>
    <type>Email</type>
</CustomField>