force-app/main/default/objects/Samples__c/fields/Approver_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver_1_Email__c</fullName>
    <description>Email of the first approver (Team Leader in APAC), used to send final approval/rejection notification</description>
    <inlineHelpText>Email of the first approver (Team Leader in APAC), used to send final approval/rejection notification</inlineHelpText>
    <label>Approver 1 Email</label>
    <type>Email</type>
</CustomField>