force-app/main/default/objects/Samples__c/fields/Approver_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Approver_2_Email__c</fullName>
    <description>Email of the second approver (Country Manager in APAC), used to send final approval/rejection notification</description>
    <inlineHelpText>Email of the second approver (Country Manager in APAC), used to send final approval/rejection notification</inlineHelpText>
    <label>Approver 2 Email</label>
    <type>Email</type>
</CustomField>