force-app/main/default/objects/Samples__c/fields/Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Confirmed__c</fullName>
    <description>Confirmed quantity. Always filled by product owner (PM).</description>
    <inlineHelpText>Confirmed quantity. Always filled by product owner (PM).</inlineHelpText>
    <label>Confirmed Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>