force-app/main/default/objects/Samples__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>End recipient. Technical contact at customer who is aware of the details and will receive the samples at the end.</description>
    <inlineHelpText>End recipient. Technical contact at customer who is aware of the details and will receive the samples at the end.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Samples (End recipient)</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>