force-app/main/default/objects/Samples__c/fields/Delivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Quantity__c</fullName>
    <description>Delivered quantity.</description>
    <inlineHelpText>Delivered quantity. Always filled by Sales Admin. This should be equal to Confirmed Quantity when the Request Status is Delivered.</inlineHelpText>
    <label>Delivered Quantity</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>