force-app/main/default/objects/Samples__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <inlineHelpText>Date when the sample has left u-blox</inlineHelpText>
    <label>Delivery/Shipment Date</label>
    <type>Date</type>
</CustomField>