force-app/main/default/objects/Samples__c/fields/FAE_Email__c.field-meta.xml
<CustomField>
    <fullName>FAE_Email__c</fullName>
    <description>This field stores the value of FAEs email addresses from the account.</description>
    <label>FAE Email</label>
    <type>Email</type>
</CustomField>