force-app/main/default/objects/Samples__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <inlineHelpText>Feedback received from customer</inlineHelpText>
    <label>Feedback</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>