force-app/main/default/objects/Samples__c/fields/Firmware__c.field-meta.xml
<CustomField>
    <fullName>Firmware__c</fullName>
    <inlineHelpText>When applicable: firmware version</inlineHelpText>
    <label>Firmware</label>
    <length>30</length>
    <type>Text</type>
</CustomField>