force-app/main/default/objects/Samples__c/fields/IPR_coverage__c.field-meta.xml
<CustomField>
    <fullName>IPR_coverage__c</fullName>
    <label>IPR coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium coverage</fullName>
            </value>
            <value>
                <fullName>Prime coverage</fullName>
            </value>
            <value>
                <fullName>Premium except Qualcomm</fullName>
            </value>
            <value>
                <fullName>Prime except Qualcomm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>