force-app/main/default/objects/Samples__c/fields/Notify_Sales_Admin_Thalwil__c.field-meta.xml
<CustomField>
    <fullName>Notify_Sales_Admin_Thalwil__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Made for email notification</description>
    <inlineHelpText>Check if Sales Admin Thalwil needs to arrange the sample shipment</inlineHelpText>
    <label>Notify Sales Admin Thalwil</label>
    <type>Checkbox</type>
</CustomField>