force-app/main/default/objects/Samples__c/fields/Opp_Use_Restriction_del__c.field-meta.xml
<CustomField>
    <fullName>Opp_Use_Restriction_del__c</fullName>
    <formula>text( Opportunity__r.DO_NOT_USE_Use_Restriction_del__c )</formula>
    <inlineHelpText>Copied from the Opportunity</inlineHelpText>
    <label>Opp Use Restriction</label>
    <type>Text</type>
</CustomField>