force-app/main/default/objects/Samples__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Required for Demonstrator, Prototype (for customer) and ES (volume)</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>