force-app/main/default/objects/Samples__c/fields/Opportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account__c</fullName>
    <formula>Opportunity__r.Opportunity_Account__r.Name</formula>
    <inlineHelpText>Opportunity Account, automatically filled when Opportunity is added.</inlineHelpText>
    <label>Opportunity Account</label>
    <type>Text</type>
</CustomField>