force-app/main/default/objects/Samples__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <inlineHelpText>Date of Order Intake</inlineHelpText>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>