force-app/main/default/objects/Samples__c/fields/Ordering_No__c.field-meta.xml
<CustomField>
    <fullName>Ordering_No__c</fullName>
    <description>Ordering Number copied from Product</description>
    <formula>Product__r.ProductCode</formula>
    <label>Ordering No</label>
    <type>Text</type>
</CustomField>