force-app/main/default/objects/Samples__c/fields/Planned_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Delivery_Date__c</fullName>
    <inlineHelpText>Always filled by product owner (PM)</inlineHelpText>
    <label>Planned Shipment Date</label>
    <type>Date</type>
</CustomField>