force-app/main/default/objects/Samples__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Price agreed with the customer</description>
    <inlineHelpText>Price agreed with the customer</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>