force-app/main/default/objects/Samples__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ordered product</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Samples</relationshipLabel>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>