force-app/main/default/objects/Samples__c/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <description>Product Center of the sample product</description>
    <formula>TEXT(Product__r.Product_Center__c)</formula>
    <inlineHelpText>Product Center of the sample product</inlineHelpText>
    <label>Product Center</label>
    <type>Text</type>
</CustomField>