force-app/main/default/objects/Samples__c/fields/Product_Owner_Alias__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner_Alias__c</fullName>
    <formula>Product__r.Product_Owner__r.Alias</formula>
    <label>Product Owner Alias</label>
    <type>Text</type>
</CustomField>