force-app/main/default/objects/Samples__c/fields/Product_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner_Email__c</fullName>
    <label>Product Owner Email</label>
    <type>Email</type>
</CustomField>