force-app/main/default/objects/Samples__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Delivered/shipped sample quantity</inlineHelpText>
    <label>Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>