force-app/main/default/objects/Samples__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remark</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>