force-app/main/default/objects/Samples__c/fields/Request_Initiator__c.field-meta.xml
<CustomField>
    <fullName>Request_Initiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Use this if the Sample request is made for someone else (Request Initiator &lt;&gt; Created By).</description>
    <inlineHelpText>Use this if the Sample request is made for someone else (Request Initiator &lt;&gt; Created By, only u-blox Internal User).</inlineHelpText>
    <label>Request Initiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Samples</relationshipName>
    <type>Lookup</type>
</CustomField>