force-app/main/default/objects/Samples__c/fields/Request_Initiator_Email__c.field-meta.xml
<CustomField>
    <fullName>Request_Initiator_Email__c</fullName>
    <description>Email to which the Email Alerts should be sent, either Request Creator or Request Initiator.</description>
    <label>Request Initiator Email</label>
    <type>Email</type>
</CustomField>