force-app/main/default/objects/Samples__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <inlineHelpText>Select New always when you create a new request.</inlineHelpText>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Clarification required</fullName>
            </value>
            <value>
                <fullName>PM review pending</fullName>
            </value>
            <value>
                <fullName>AE review pending</fullName>
            </value>
            <value>
                <fullName>Tentatively confirmed</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Partially shipped</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>