force-app/main/default/objects/Samples__c/fields/Requested_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Requested_Minimum_Quantity__c</fullName>
    <label>Requested Minimum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>