force-app/main/default/objects/Samples__c/fields/Requested_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Requested_Quantity__c</fullName>
    <label>Requested Quantity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>