force-app/main/default/objects/Samples__c/fields/Sample_Usage__c.field-meta.xml
<CustomField>
    <fullName>Sample_Usage__c</fullName>
    <inlineHelpText>Product status of the sample to request.
Demonstrator: To demonstrate new technology in advance (e.g. DR u-blox M8)
Prototype: For early product evaluation before ES
ES: Engineering Sample (for region or customer)</inlineHelpText>
    <label>Sample Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Demonstrator</fullName>
            </value>
            <value>
                <fullName>Prototype (for customer)</fullName>
            </value>
            <value>
                <fullName>Prototype (for internal use)</fullName>
            </value>
            <value>
                <fullName>ES (regional allocation)</fullName>
            </value>
            <value>
                <fullName>ES (volume)</fullName>
            </value>
            <value>
                <fullName>Samples in production (IP, MP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>