force-app/main/default/objects/Samples__c/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact to whom the sample should be shipped from Thalwil. This can be u-blox or the same as Contact (end recipient).</inlineHelpText>
    <label>Ship To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Samples (Ship To)</relationshipLabel>
    <relationshipName>Samples1</relationshipName>
    <type>Lookup</type>
</CustomField>