force-app/main/default/objects/Samples__c/fields/Ship_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Account__c</fullName>
    <description>Account name of Ship To Contact</description>
    <inlineHelpText>Account name of Ship To Contact</inlineHelpText>
    <label>Ship To Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>