force-app/main/default/objects/Samples__c/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country__c</fullName>
    <description>Country of Ship To Contact</description>
    <inlineHelpText>Country of Ship To Contact</inlineHelpText>
    <label>Ship To Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>