force-app/main/default/objects/Samples__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <description>From Product</description>
    <formula>TEXT(Product__r.Technology__c)</formula>
    <inlineHelpText>From Product</inlineHelpText>
    <label>Technology</label>
    <type>Text</type>
</CustomField>