force-app/main/default/objects/Samples__c/fields/Type_No__c.field-meta.xml
<CustomField>
    <fullName>Type_No__c</fullName>
    <description>Type Number copied from Product</description>
    <formula>Product__r.Type_No__c</formula>
    <label>Type No</label>
    <type>Text</type>
</CustomField>