force-app/main/default/objects/Samples__c/fields/uB_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>uB_Support_Email__c</fullName>
    <inlineHelpText>uB Support Team email to be informed on the delivery</inlineHelpText>
    <label>uB Support Email</label>
    <type>Email</type>
</CustomField>