force-app/main/default/objects/Samples__c/recordTypes/Engineering_Samples.recordType-meta.xml
<RecordType>
    <fullName>Engineering_Samples</fullName>
    <active>true</active>
    <description>Choose this one in order to record and track samples under Status:  Engineering Samples (ES)</description>
    <label>Engineering Sample</label>
</RecordType>