force-app/main/default/objects/Samples__c/recordTypes/Prototypes.recordType-meta.xml
<RecordType>
    <fullName>Prototypes</fullName>
    <active>true</active>
    <description>Choose this one in order to record and track samples under Status: In Development (ID) or  Prototype (P)</description>
    <label>Prototype</label>
</RecordType>