force-app/main/default/objects/Samples__c/recordTypes/Sample_recording.recordType-meta.xml
<RecordType>
    <fullName>Sample_recording</fullName>
    <active>true</active>
    <description>Depreciated as part of ticket IN_SF_MTC-696</description>
    <label>Sample recording</label>
</RecordType>