force-app/main/default/objects/Samples__c/recordTypes/Sample_request.recordType-meta.xml
<RecordType>
    <fullName>Sample_request</fullName>
    <active>true</active>
    <description>Depreciated as part of ticket IN_SF_MTC-696</description>
    <label>Sample request</label>
</RecordType>