force-app/main/default/objects/Samples__c/recordTypes/Samples.recordType-meta.xml
<RecordType>
    <fullName>Samples</fullName>
    <active>true</active>
    <description>Choose this one in order to record and track samples under Status:  Initial Production (IP) - Production Ready (PR) and Mass Production (MP)</description>
    <label>Sample</label>
</RecordType>