force-app/main/default/objects/Samples__c/validationRules/Product_Status_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Status_Check</fullName>
    <active>false</active>
    <description>For Patty&apos;s request:</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Request_Status__c,&quot;New&quot;),
  OR(
    NOT(Product__r.IsActive),
    ISPICKVAL(Product__r.Product_Status__c,&quot;Considered&quot;),
    ISPICKVAL(Product__r.Product_Status__c,&quot;End of Life&quot;),
    ISPICKVAL(Product__r.Product_Status__c,&quot;Obsolete&quot;)
  )
)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Selected product is not available for sampling (Product Status: Considered, End of Life or Obsolete OR the selected product is not Active).</errorMessage>
</ValidationRule>