force-app/main/default/objects/Samples__c/validationRules/Product_Status_for_Engineering_Samples.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Status_for_Engineering_Samples</fullName>
    <active>true</active>
    <description>For Engineering Sample RecordType, only Products with Status &quot;Engineering Samples&quot; and &quot;In Development&quot; are allowed.</description>
    <errorConditionFormula>AND(
$RecordType.DeveloperName =&quot;Engineering_Samples&quot;,
NOT(
OR(
ISPICKVAL(Product__r.Product_Status__c,&quot;In Development&quot;),
ISPICKVAL(Product__r.Product_Status__c,&quot;Engineering Samples&quot;)
))
)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>For Engineering Sample RecordType, only Products with Status &quot;Engineering Samples&quot; and &quot;In Development&quot; are allowed.</errorMessage>
</ValidationRule>