force-app/main/default/objects/Samples__c/validationRules/Product_Status_for_Sample_request.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Status_for_Sample_request</fullName>
    <active>false</active>
    <description>For record type Sample request, Product Status must be Prototype or In Development.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Request_Status__c,&quot;New&quot;),
  RecordTypeId=&quot;012D0000000BVp8&quot;,
  NOT(Owner:Queue.Id=&quot;00GD0000004KcjM&quot;),
  NOT(Owner:Queue.Id=&quot;00G20000001Lsah&quot;),
  NOT(Owner:Queue.Id=&quot;00GD0000004KcjR&quot;),
  NOT(ISPICKVAL(Product__r.Product_Status__c,&quot;In Definition&quot;)),
  NOT(ISPICKVAL(Product__r.Product_Status__c,&quot;In Development&quot;)),
  NOT(ISPICKVAL(Product__r.Product_Status__c,&quot;Prototypes&quot;)),
  NOT(ISPICKVAL(Product__r.Product_Status__c,&quot;Engineering Samples&quot;))
)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>For Sample request, choose a product with Product Status &quot;ES&quot; or earlier.</errorMessage>
</ValidationRule>