force-app/main/default/objects/Samples__c/validationRules/Quantity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Request_Status__c,&apos;Shipped&apos;), ISBLANK(Quantity__c), OR(RecordType.DeveloperName = &apos;Engineering_Samples&apos;,RecordType.DeveloperName = &apos;Prototypes&apos;))</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>The Quantity field is mandatory, please enter a quantity.</errorMessage>
</ValidationRule>